feat: basket area ui fix

--- a/src/app/pages/menu-page/basket/basket.component.html
+++ b/src/app/pages/menu-page/basket/basket.component.html
@@ -3,10 +3,12 @@
     <mat-card>
       <mat-card-content>
         <div>
-          <img src="" alt="" />
-          <span class="dc-menu-card__basket-description">
-            Your basket is empty
-          </span>
+          <img
+            src="assets/images/menu-page/mall-basket-svgrepo-com.svg"
+            alt="basket"
+            class="dc-menu-basket__basket-img"
+          />
+          <p class="dc-menu-basket__basket-description">Your basket is empty</p>
         </div>
         <div class="row d-flex">
           <button mat-raised-button disabled="">Go to checkout</button>
