--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -11,7 +11,11 @@
     </div>
     <div class="row">
       <div class="d-flex col-4">
-        <img src="assets\images\card-chef.jpg" alt="menu" style="width: 100%" />
+        <img
+          src="assets\images\card-chef.jpg"
+          alt="menu"
+          class="dc-menu__main-img"
+        />
       </div>
       <div class="d-flex col-5">
         <div class="row">
