--- a/src/app/pages/menu-page/basket/basket.component.scss
+++ b/src/app/pages/menu-page/basket/basket.component.scss
@@ -1,3 +1,14 @@
-// .dc-menu-basket {
-//   position: inherit;
-// }
+.dc-menu-basket {
+  &__basket-img {
+    display: block;
+    margin-top: 14px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 14px;
+  }
+
+  &__basket-description {
+    text-align: center;
+    color: #abadad;
+  }
+}
