--- a/src/app/pages/menu-page/menu-page.component.scss
+++ b/src/app/pages/menu-page/menu-page.component.scss
@@ -15,6 +15,11 @@
     padding-right: 10px;
   }
 
+  &__main-img {
+    width: 100%;
+    border-radius: 10px;
+  }
+
   &__info-button {
     background-color: transparent;
     border: none;
