--- a/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.html
@@ -3,101 +3,101 @@
 </div>
 <div>
   <p>(Prices per head)</p>
-</div>
-<div class="row dc-menu-card__card-margin">
-  <div class="col d-flex">
-    <mat-card>
-      <mat-card-content>
-        <h3 class="dc-menu-card__card-heading">Set Meal A</h3>
-        <span class="dc-menu-card__card-description">
-          Hot d'oewres special, chicken and sweetcorn soup, sweet and sour
-          chicken (h.k style), sizzling fillet steak in satay sauce, stir fried
-          mixed vegetables, yeung chow fried rice. (Minimum 2 person)
-        </span>
-        <br />
-        <span class="dc-menu-card__card-price">£20.00</span>
-      </mat-card-content>
-    </mat-card>
+  <div class="row dc-menu-card__card-margin">
+    <div class="col d-flex">
+      <mat-card>
+        <mat-card-content>
+          <h3 class="dc-menu-card__card-heading">Set Meal A</h3>
+          <span class="dc-menu-card__card-description">
+            Hot d'oewres special, chicken and sweetcorn soup, sweet and sour
+            chicken (h.k style), sizzling fillet steak in satay sauce, stir
+            fried mixed vegetables, yeung chow fried rice. (Minimum 2 person)
+          </span>
+          <br />
+          <span class="dc-menu-card__card-price">£20.00</span>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col">
+      <mat-card>
+        <mat-card-content>
+          <h3 class="dc-menu-card__card-heading">Set Meal B</h3>
+          <span class="dc-menu-card__card-description">
+            Hons d'oewres special, aromatic crispy duck, chicken in satay sauce,
+            sizzling beef with green pepper in black bean sauce, sweet and sour
+            pork (h.k styles), stir fried mixed vegetables, yeung chow fried
+            rice. (Minimum 2 persons)
+          </span>
+          <br />
+          <span class="dc-menu-card__card-price">£22.50</span>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
-  <div class="col">
-    <mat-card>
-      <mat-card-content>
-        <h3 class="dc-menu-card__card-heading">Set Meal B</h3>
-        <span class="dc-menu-card__card-description">
-          Hons d'oewres special, aromatic crispy duck, chicken in satay sauce,
-          sizzling beef with green pepper in black bean sauce, sweet and sour
-          pork (h.k styles), stir fried mixed vegetables, yeung chow fried rice.
-          (Minimum 2 persons)
-        </span>
-        <br />
-        <span class="dc-menu-card__card-price">£22.50</span>
-      </mat-card-content>
-    </mat-card>
+  <div class="row dc-menu-card__card-margin">
+    <div class="col d-flex">
+      <mat-card>
+        <mat-card-content>
+          <h3 class="dc-menu-card__card-heading">Set Meal C</h3>
+          <span class="dc-menu-card__card-description">
+            Hons d'oewres special, lettuce wrap (chicken/pork), deep fried
+            shredded beef, king prawn with ginger and spring onion, sizzling
+            fillet steak in cantonese style, chicken with green peppers and
+            black bean sauce, char siu, stir fried mixed vegetables, yeung chow
+            fried rice. (Minimum 4 persons)
+          </span>
+          <br />
+          <span class="dc-menu-card__card-price">£20.00</span>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col">
+      <mat-card>
+        <mat-card-content>
+          <h3 class="dc-menu-card__card-heading">Set Meal D</h3>
+          <span class="dc-menu-card__card-description">
+            Hors d'oewres special, hot and sour soup, aromatic crispy duck,
+            sweet and sour pork (h.k style), king prawn and chicken in phoenix's
+            nest, whole steamed seabass, chicken with satay sauce, sizzling
+            fillet steak with ginger and spring onion, stir fried mixed
+            vegetables, yeung chow fried rice. (Minimum 4 persons)
+          </span>
+          <br />
+          <span class="dc-menu-card__card-price">£27.00</span>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
-</div>
-<div class="row dc-menu-card__card-margin">
-  <div class="col d-flex">
-    <mat-card>
-      <mat-card-content>
-        <h3 class="dc-menu-card__card-heading">Set Meal C</h3>
-        <span class="dc-menu-card__card-description">
-          Hons d'oewres special, lettuce wrap (chicken/pork), deep fried
-          shredded beef, king prawn with ginger and spring onion, sizzling
-          fillet steak in cantonese style, chicken with green peppers and black
-          bean sauce, char siu, stir fried mixed vegetables, yeung chow fried
-          rice. (Minimum 4 persons)
-        </span>
-        <br />
-        <span class="dc-menu-card__card-price">£20.00</span>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  <div class="col">
-    <mat-card>
-      <mat-card-content>
-        <h3 class="dc-menu-card__card-heading">Set Meal D</h3>
-        <span class="dc-menu-card__card-description">
-          Hors d'oewres special, hot and sour soup, aromatic crispy duck, sweet
-          and sour pork (h.k style), king prawn and chicken in phoenix's nest,
-          whole steamed seabass, chicken with satay sauce, sizzling fillet steak
-          with ginger and spring onion, stir fried mixed vegetables, yeung chow
-          fried rice. (Minimum 4 persons)
-        </span>
-        <br />
-        <span class="dc-menu-card__card-price">£27.00</span>
-      </mat-card-content>
-    </mat-card>
-  </div>
-</div>
-<div class="row dc-menu-card__card-margin">
-  <div class="col d-flex">
-    <mat-card>
-      <mat-card-content>
-        <h3 class="dc-menu-card__card-heading">Set Meal E</h3>
-        <span class="dc-menu-card__card-description">
-          Vegetarian lettuce wrap, vegetarian hot and sour soup, bean curd in
-          szechuan sauce, mushrooms with green pepper and black bean sauce,
-          fried mixed vegetables in satay sauce, boiled rice. (Minimum 2
-          persons)
-        </span>
-        <span class="dc-menu-card__card-price">£13.50</span>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  <div class="col">
-    <mat-card>
-      <mat-card-content>
-        <h3 class="dc-menu-card__card-heading">Set Meal F</h3>
-        <span class="dc-menu-card__card-description">
-          Vegetarian hors d'oewres special, sweetcorn soup, vegetarian lettuce
-          wrap, bean curd in black pepper sauce, aubergines with green pepper in
-          black bean sauce, stir fried vegetables with mushrooms, sweet and sour
-          mixed vegetables chow mien in satay sauce, boiled rice. (Minimum 4
-          persons)
-        </span>
-        <br />
-        <span class="dc-menu-card__card-price">£15.50</span>
-      </mat-card-content>
-    </mat-card>
+  <div class="row dc-menu-card__card-margin">
+    <div class="col d-flex">
+      <mat-card>
+        <mat-card-content>
+          <h3 class="dc-menu-card__card-heading">Set Meal E</h3>
+          <span class="dc-menu-card__card-description">
+            Vegetarian lettuce wrap, vegetarian hot and sour soup, bean curd in
+            szechuan sauce, mushrooms with green pepper and black bean sauce,
+            fried mixed vegetables in satay sauce, boiled rice. (Minimum 2
+            persons)
+          </span>
+          <span class="dc-menu-card__card-price">£13.50</span>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col">
+      <mat-card>
+        <mat-card-content>
+          <h3 class="dc-menu-card__card-heading">Set Meal F</h3>
+          <span class="dc-menu-card__card-description">
+            Vegetarian hors d'oewres special, sweetcorn soup, vegetarian lettuce
+            wrap, bean curd in black pepper sauce, aubergines with green pepper
+            in black bean sauce, stir fried vegetables with mushrooms, sweet and
+            sour mixed vegetables chow mien in satay sauce, boiled rice.
+            (Minimum 4 persons)
+          </span>
+          <br />
+          <span class="dc-menu-card__card-price">£15.50</span>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
 </div>
