feat: menu card don't say bojio list ui complete

--- a/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
@@ -1,1 +1,121 @@
-<p>first-list works!</p>
+<div class="row">
+  <h1 class="dc-menu-card-list__heading">#Don't say bojio!</h1>
+</div>
+<div class="row">
+  <p class="dc-menu-card-list__text">#Don't say bojio!</p>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Pom Pipi Bundle for 4A Dishes
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Bundle includes our signature deep fried seabass, choice of
+                meat, vegetable & beancurd
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__red-text"> $59.90 </span>
+                  <span class="dc-menu-card-list__black-line-text">$99.83</span>
+                  <span class="dc-menu-card-list__red-text">. 40% off</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Pom Pipi Bundle for 4A Dishes
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Bundle includes our signature deep fried seabass, choice of
+                meat, vegetable & beancurd
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__red-text"> $59.90 </span>
+                  <span class="dc-menu-card-list__black-line-text">$99.83</span>
+                  <span class="dc-menu-card-list__red-text">. 40% off</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Pom Pipi Bundle for 4A Dishes
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Bundle includes our signature deep fried seabass, choice of
+                meat, vegetable & beancurd
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__red-text"> $59.90 </span>
+                  <span class="dc-menu-card-list__black-line-text">$99.83</span>
+                  <span class="dc-menu-card-list__red-text">. 40% off</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col">
+    <div class="dc-menu-card-list__mat-card"></div>
+  </div>
+</div>
