--- a/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.html
@@ -100,4 +100,46 @@
       </mat-card>
     </div>
   </div>
+  <div class="row">
+    <app-first-list></app-first-list>
+  </div>
+  <div class="row">
+    <app-premium-edition-set></app-premium-edition-set>
+  </div>
+  <div class="row">
+    <app-top-selling-single-set-meal></app-top-selling-single-set-meal>
+  </div>
+  <div class="row">
+    <app-double-delight-meal></app-double-delight-meal>
+  </div>
+  <div class="row">
+    <app-mix-match-combo-bundles></app-mix-match-combo-bundles>
+  </div>
+  <div class="row">
+    <app-ultimate-seabass-is-here></app-ultimate-seabass-is-here>
+  </div>
+  <div class="row">
+    <app-bento-series></app-bento-series>
+  </div>
+  <div class="row">
+    <app-noodles></app-noodles>
+  </div>
+  <div class="row">
+    <app-porridge></app-porridge>
+  </div>
+  <div class="row">
+    <app-fried-rice-claypot-rice></app-fried-rice-claypot-rice>
+  </div>
+  <div class="row">
+    <app-meat></app-meat>
+  </div>
+  <div class="row">
+    <app-handmade-beancurd></app-handmade-beancurd>
+  </div>
+  <div class="row">
+    <app-vegetables></app-vegetables>
+  </div>
+  <div class="row">
+    <app-drinks></app-drinks>
+  </div>
 </div>
