feat: add card responsiveness

--- a/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
@@ -5,7 +5,7 @@
   <p class="dc-menu-card-list__text">#Don't say bojio!</p>
 </div>
 <div class="row">
-  <div class="col">
+  <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
       <mat-card>
         <mat-card-content>
@@ -41,7 +41,7 @@
       </mat-card>
     </div>
   </div>
-  <div class="col">
+  <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
       <mat-card>
         <mat-card-content>
@@ -79,7 +79,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col">
+  <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
       <mat-card>
         <mat-card-content>
@@ -115,7 +115,7 @@
       </mat-card>
     </div>
   </div>
-  <div class="col">
+  <div class="col-xl">
     <div class="dc-menu-card-list__mat-card"></div>
   </div>
 </div>
