--- a/src/app/pages/menu-page/dish-category-bar/premium-edition-set/premium-edition-set.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/premium-edition-set/premium-edition-set.component.html
@@ -1,1 +1,76 @@
-<p>premium-edition-set works!</p>
+<div class="row">
+  <h1 class="dc-menu-card-list__heading">Premium Edition Set !</h1>
+</div>
+<div class="row">
+  <p class="dc-menu-card-list__text">Premium Edition Set !</p>
+</div>
+<div class="row">
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Superior Cod Fish Set
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Featuring succulent slice cod fish tossed in dark soya sauce,
+                perfectly paired with our porridge
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $27.40</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Best Selling Frog's Meat Set
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Time to spice up your taste buds with our best selling Ginger
+                Scallion or Gong Bao Frog Meat
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $27.40 </span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
