--- a/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
@@ -1,1 +1,213 @@
-<p>top-selling-single-set-meal works!</p>
+<div class="row">
+  <h1 class="dc-menu-card-list__heading">Top Selling Single Set Meal</h1>
+</div>
+<div class="row">
+  <p class="dc-menu-card-list__text">Top Selling Single Set Meal</p>
+</div>
+<div class="row">
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Porridge w Century Egg & Meatball 干贝皮蛋肉丸粥
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Starting the day with a warm bowl of porridge with umami century
+                egg & QQ meatball. Set comes with snack of the day & seasonal
+                vegetables
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $17.30</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Dried Scallop Fishmaw Porridge
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                All new silky scallop porrdige paired with fishmaw
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $18.30 </span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Wok Hey Seafood Hor Fun 锅气海鲜河粉
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Mildy charred Kway Teow paired with umami filled Seafood Gravy
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $17.30</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/76f2af16-b474-493c-b1d2-d01f725748e2/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                [NEW] Yammy Porridge Set
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                New Yam Porridge choose from minced meat or shredded chicken.
+                Set comes with seasonal vegetables
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $17.30 </span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/26779893-30bc-4604-9773-014209462ef1/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Pork Cutlet Olive Fried Rice猪扒橄榄菜炒饭
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Savoury Olive fried rice paired with breaded Pork Cutlet
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $18.30</span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/494387fd-a9b4-4078-912d-feaec23e2d36/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col">
+              <p class="dc-menu-card-list__card-heading">
+                Char Siew Yang Zhou Fried Rice 叉烧扬州炒饭
+              </p>
+              <span class="dc-menu-card-list__card-description">
+                Experience the Asian delight, Char Siew Yang Zhou Fried Rice!
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $17.30 </span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img
+                  src="https://rs-menus-api.roocdn.com/images/1d5ebcfd-5f18-4e09-a92f-fd5055304ebd/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                  alt="dish"
+                  class="dc-menu-card-list__img"
+                />
+                <span>+</span>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
