--- a/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/pages/menu-page/restaurant-menu/restaurant-menu.component.html
@@ -3,8 +3,8 @@
 </div>
 <div>
   <p>(Prices per head)</p>
-  <div class="row dc-menu-card__card-margin">
-    <div class="col d-flex">
+  <div class="row">
+    <div class="col-xl d-flex dc-menu-card__card-margin">
       <mat-card>
         <mat-card-content>
           <h3 class="dc-menu-card__card-heading">Set Meal A</h3>
@@ -18,7 +18,7 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="col">
+    <div class="col-xl dc-menu-card__card-margin">
       <mat-card>
         <mat-card-content>
           <h3 class="dc-menu-card__card-heading">Set Meal B</h3>
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="row dc-menu-card__card-margin">
-    <div class="col d-flex">
+    <div class="col-xl d-flex d-flex dc-menu-card__card-margin">
       <mat-card>
         <mat-card-content>
           <h3 class="dc-menu-card__card-heading">Set Meal C</h3>
@@ -51,7 +51,7 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="col">
+    <div class="col-xl d-flex dc-menu-card__card-margin">
       <mat-card>
         <mat-card-content>
           <h3 class="dc-menu-card__card-heading">Set Meal D</h3>
@@ -69,7 +69,7 @@
     </div>
   </div>
   <div class="row dc-menu-card__card-margin">
-    <div class="col d-flex">
+    <div class="col-xl d-flex d-flex dc-menu-card__card-margin">
       <mat-card>
         <mat-card-content>
           <h3 class="dc-menu-card__card-heading">Set Meal E</h3>
@@ -83,7 +83,7 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="col">
+    <div class="col-xl d-flex dc-menu-card__card-margin">
       <mat-card>
         <mat-card-content>
           <h3 class="dc-menu-card__card-heading">Set Meal F</h3>
