feat: in card heading's margins fixed

--- a/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
@@ -10,13 +10,13 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
-                Pom Pipi Bundle for 4A Dishes
-              </p>
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
+                Pom Pipi Bundle for 4B Dishes </span
+              ><br />
               <span class="dc-menu-card-list__card-description">
-                Bundle includes our signature deep fried seabass, choice of
-                meat, vegetable & beancurd
+                Bundle includes Superior cod fish, choice of meat,vege and
+                beancurd
               </span>
               <div class="row">
                 <div class="dc-menu-card-list__price-details">
@@ -26,15 +26,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -46,10 +52,10 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
-                Pom Pipi Bundle for 4A Dishes
-              </p>
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
+                Pom Pipi Bundle for 4A Dishes </span
+              ><br />
               <span class="dc-menu-card-list__card-description">
                 Bundle includes our signature deep fried seabass, choice of
                 meat, vegetable & beancurd
@@ -62,15 +68,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/b4041ce2-84a0-49f6-9bc0-c54a7cdd68f5/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -84,31 +96,38 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
-                Pom Pipi Bundle for 4A Dishes
-              </p>
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
+                Seafood In The Tray 海鲜拼盘 (2 pax)
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
-                Bundle includes our signature deep fried seabass, choice of
-                meat, vegetable & beancurd
+                Comes with choice of 2 customer top pick sauce. Choose from
+                Signature Salted Egg & Classic Chilli
               </span>
               <div class="row">
                 <div class="dc-menu-card-list__price-details">
-                  <span class="dc-menu-card-list__red-text"> $59.90 </span>
-                  <span class="dc-menu-card-list__black-line-text">$99.83</span>
+                  <span class="dc-menu-card-list__red-text"> $39.90 </span>
+                  <span class="dc-menu-card-list__black-line-text">$66.50</span>
                   <span class="dc-menu-card-list__red-text">. 40% off</span>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/1d6ba9dd-430a-4753-b435-4744e6127af5/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/e2a0c6b8-64ab-4f8d-9bc0-7a2275339aa6/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
