--- a/src/app/pages/menu-page/dish-category-bar/premium-edition-set/premium-edition-set.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/premium-edition-set/premium-edition-set.component.html
@@ -10,10 +10,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Superior Cod Fish Set
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 Featuring succulent slice cod fish tossed in dark soya sauce,
                 perfectly paired with our porridge
@@ -24,15 +25,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -44,10 +51,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Best Selling Frog's Meat Set
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 Time to spice up your taste buds with our best selling Ginger
                 Scallion or Gong Bao Frog Meat
@@ -58,15 +66,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
