--- a/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.scss
+++ b/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.scss
@@ -47,4 +47,14 @@
   &__img {
     width: 98px;
   }
+
+  &__add-button {
+    width: 40px;
+    height: 100px;
+  }
+
+  &__button-img {
+    width: 10px;
+    height: 10px;
+  }
 }
