--- a/src/app/pages/menu-page/dish-category-bar/premium-edition-set/premium-edition-set.component.scss
+++ b/src/app/pages/menu-page/dish-category-bar/premium-edition-set/premium-edition-set.component.scss
@@ -40,4 +40,14 @@
   &__img {
     width: 98px;
   }
+
+  &__add-button {
+    width: 40px;
+    height: 100px;
+  }
+
+  &__button-img {
+    width: 10px;
+    height: 10px;
+  }
 }
