feat: add top selling single set meal to the menu card

--- a/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
@@ -10,10 +10,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Porridge w Century Egg & Meatball 干贝皮蛋肉丸粥
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 Starting the day with a warm bowl of porridge with umami century
                 egg & QQ meatball. Set comes with snack of the day & seasonal
@@ -25,15 +26,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/711a259f-3f1c-4153-be4f-27527fd80798/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -45,10 +52,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Dried Scallop Fishmaw Porridge
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 All new silky scallop porrdige paired with fishmaw
               </span>
@@ -58,15 +66,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/8cec1e0d-5051-457e-be53-65a12d914709/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop&quot"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -80,10 +94,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Wok Hey Seafood Hor Fun 锅气海鲜河粉
-              </p>
+              </span>
+              br
               <span class="dc-menu-card-list__card-description">
                 Mildy charred Kway Teow paired with umami filled Seafood Gravy
               </span>
@@ -93,15 +108,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/76f2af16-b474-493c-b1d2-d01f725748e2/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/76f2af16-b474-493c-b1d2-d01f725748e2/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -113,10 +134,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 [NEW] Yammy Porridge Set
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 New Yam Porridge choose from minced meat or shredded chicken.
                 Set comes with seasonal vegetables
@@ -127,15 +149,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/26779893-30bc-4604-9773-014209462ef1/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/26779893-30bc-4604-9773-014209462ef1/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -149,10 +177,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Pork Cutlet Olive Fried Rice猪扒橄榄菜炒饭
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 Savoury Olive fried rice paired with breaded Pork Cutlet
               </span>
@@ -162,15 +191,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/494387fd-a9b4-4078-912d-feaec23e2d36/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/494387fd-a9b4-4078-912d-feaec23e2d36/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
@@ -182,10 +217,11 @@
       <mat-card>
         <mat-card-content>
           <div class="row">
-            <div class="col">
-              <p class="dc-menu-card-list__card-heading">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
                 Char Siew Yang Zhou Fried Rice 叉烧扬州炒饭
-              </p>
+              </span>
+              <br />
               <span class="dc-menu-card-list__card-description">
                 Experience the Asian delight, Char Siew Yang Zhou Fried Rice!
               </span>
@@ -195,15 +231,21 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="row">
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/1d5ebcfd-5f18-4e09-a92f-fd5055304ebd/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
                 <img
-                  src="https://rs-menus-api.roocdn.com/images/1d5ebcfd-5f18-4e09-a92f-fd5055304ebd/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
-                  alt="dish"
-                  class="dc-menu-card-list__img"
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
                 />
-                <span>+</span>
-              </div>
+              </button>
             </div>
           </div>
         </mat-card-content>
