feat: handmade beancurd ui section add to the menu card section area

--- a/src/app/pages/menu-page/dish-category-bar/handmade-beancurd/handmade-beancurd.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/handmade-beancurd/handmade-beancurd.component.html
@@ -1,1 +1,137 @@
-<p>handmade-beancurd works!</p>
+<div class="row">
+  <h1 class="dc-menu-card-list__heading">Handmade Beancurd 手工豆腐</h1>
+</div>
+<div class="row">
+  <p class="dc-menu-card-list__text">Handmade Beancurd 手工豆腐</p>
+</div>
+<div class="row">
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
+                710 Beancurd with Chai Po in HK Style Sauce 港式菜圃豆腐
+              </span>
+              <br />
+              <span class="dc-menu-card-list__card-description">
+                Customer favourite! Silky and smooth beancurd garnished with
+                crispy chai po for an added crunch!
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text"> $15.90</span>
+                  <span class="dc-menu-card-list__popular-text"> Popular</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/71b9770f-f09a-4bef-ae9e-faf5dd29d45a/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
+                <img
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
+                />
+              </button>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
+                245 Beancurd w Assort Mushroom & Meat 香菇肉碎豆腐
+              </span>
+              <br />
+              <span class="dc-menu-card-list__card-description">
+                Served in signature dark sauce coupled with mushroom and minced
+                meat
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text">$15.90</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/73b93391-449a-42f1-8ffc-f11d5bf8a8c7/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
+                <img
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
+                />
+              </button>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card">
+      <mat-card>
+        <mat-card-content>
+          <div class="row">
+            <div class="col-8">
+              <span class="dc-menu-card-list__card-heading">
+                712 Beancurd with Assorted Mushrooms and Broccoli 三菇西兰花豆腐
+              </span>
+              <br />
+              <span class="dc-menu-card-list__card-description">
+                Garnished with vegetables, this beancurd is the perfect healthy
+                dish
+              </span>
+              <div class="row">
+                <div class="dc-menu-card-list__price-details">
+                  <span class="dc-menu-card-list__black-text">$15.90</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-2">
+              <img
+                src="https://rs-menus-api.roocdn.com/images/bac9c009-2d5d-4d8f-af33-d4d5de247624/image.jpeg?width=98&height=98&auto=webp&format=jpg&fit=crop"
+                alt="dish"
+                class="dc-menu-card-list__img"
+              />
+            </div>
+            <div class="col-2">
+              <button mat-stroked-button class="dc-menu-card-list__add-button">
+                <img
+                  src="assets/images/menu-page/plus-symbol.svg"
+                  alt="add-icon"
+                  class="dc-menu-card-list__button-img"
+                />
+              </button>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+  <div class="col-xl">
+    <div class="dc-menu-card-list__mat-card"></div>
+  </div>
+</div>
